<?xml version="1.0"?>
<package format="2">
  <name>apriltag2_node</name>
  <version>1.0.1</version>
  <description>AprilTag2 detection node</description>
  <maintainer email="Rauch.Christian@gmx.de"></maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>apriltag_msgs</depend>
  <depend>apriltag</depend>
  <depend>class_loader</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
